test/spec_vectors/simd_i32x4_cmp/fail/module_4.wat
(module (func (result v128) (i32x4.gt_s (i32.const 0) (f32.const 0))))